fixed overlapping menu

--- a/grails-app/assets/stylesheets/vanity/commons/navbar.less
+++ b/grails-app/assets/stylesheets/vanity/commons/navbar.less
@@ -56,7 +56,7 @@
   background-color: @menu-sub-section-color;
 
   position:fixed;
-  z-index:10;
+  z-index:1;
   width:100%;
   top: @menu-height;
 
